[package]
name = "smartcore-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smartcore = { version = "0.2.0", default-features = false, features=["nalgebra-bindings", "ndarray-bindings", "datasets"]}
structopt = "0.3.17"
ndarray = "0.14"
nalgebra = "0.23.0"
plotters = "^0.3.0"
serde = "1.0.115"
bincode = "1.3.1"
